...
        label.textColor = .black
        label.font = UIFont(name:"SFProRounded-Semibold", size: 30) ?? UIFont.boldSystemFont(ofSize: 30)
        return label
    }()
    private lazy var button: UIButton = {
        let button = UIButton()
        button.setTitle("Apply", for: .normal)
        button.setTitleColor(.white, for: .normal)
        button.setTitleColor(.gray, for: .disabled)
        button.backgroundColor = .tintColor
        button.layer.cornerRadius = 10
        button.titleLabel?.font =  UIFont(name:"SFProRounded-Semibold", size: 20) ?? UIFont.boldSystemFont(ofSize: 20)
        button.addTarget(self, action: #selector(applyButtonPressed(_:)), for: .touchUpInside)
...
